tests/baselines/reference/innerModExport1.errors.txt
innerModExport1.ts(5,5): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
innerModExport1.ts(5,12): error TS1437: Namespace must be given a name.
innerModExport1.ts(19,7): error TS2339: Property 'ExportFunc' does not exist on type 'typeof Outer'.


==== innerModExport1.ts (3 errors) ====
    namespace Outer {
    
        // inner mod 1
        var non_export_var: number;
        module {
        ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
               ~
!!! error TS1437: Namespace must be given a name.
            var non_export_var = 0;
            export var export_var = 1;
    
            function NonExportFunc() { return 0; }
    
            export function ExportFunc() { return 0; }
        }
    
        export var outer_var_export = 0;
        export function outerFuncExport() { return 0; }
    
    }
    
    Outer.ExportFunc();
          ~~~~~~~~~~
!!! error TS2339: Property 'ExportFunc' does not exist on type 'typeof Outer'.